<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dialog.DialogsActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDialogBottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_bottom"
            android:onClick="dialogOnClick" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDialogCenter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_center"
            android:onClick="dialogOnClick" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDialogBottomWebView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_bottom_webview"
            android:onClick="dialogOnClick" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDialogCenterWebView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_center_webview"
            android:onClick="dialogOnClick" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDialogConfirmCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_confirm_cancel"
            android:onClick="dialogOnClick" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDialogOnlyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_only_button"
            android:onClick="dialogOnClick" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>
