<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnGraphicCode"
                style="@style/MainButtons"
                android:text="图形码相关界面" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnCustomView"
                style="@style/MainButtons"
                android:text="安卓-自定义控件相关界面" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnCustomTools"
                style="@style/MainButtons"
                android:text="安卓-自定义工具类相关界面" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnAnim"
                style="@style/MainButtons"
                android:text="@string/page_type_anims" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnBlue"
                style="@style/MainButtons"
                android:text="@string/page_type_bluetooth" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSmartRefreshLayout"
                android:text="@string/page_type_custom_view_smart_refresh_layout"
                style="@style/MainButtons" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnDataParse"
                android:text="@string/page_type_data_parse"
                style="@style/MainButtons" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnNet"
                android:text="@string/page_type_net"
                style="@style/MainButtons" />

        </LinearLayout>


    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
